// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Merge includes (md2md) > basic: simple include is inlined > filelist 1`] = `
"[
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > basic: simple include is inlined 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Index

Welcome page.
"
`;

exports[`Merge includes (md2md) > basic: simple include is inlined 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# Main Document

Content before include.

<!-- source: _includes/simple.md -->
## Included Section

This is the included content.

<!-- endsource: _includes/simple.md -->

Content after include.
"
`;

exports[`Merge includes (md2md) > basic: simple include is inlined 3`] = `
"title: Merge Includes Basic
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;

exports[`Merge includes (md2md) > hash-section: includes with hash extract sections inline > filelist 1`] = `
"[
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > hash-section: includes with hash extract sections inline 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Hash Fallback Test
"
`;

exports[`Merge includes (md2md) > hash-section: includes with hash extract sections inline 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# Main Document

<!-- source: _includes/sections.md -->
{% list tabs %}

- Tab 1

    \`\`\`
    # Heading inside code
    \`\`\`

    Content of tab 1.

{% endlist %}
<!-- endsource: _includes/sections.md -->

<!-- source: _includes/sections.md -->
Content of section B.
<!-- endsource: _includes/sections.md -->
"
`;

exports[`Merge includes (md2md) > hash-section: includes with hash extract sections inline 3`] = `
"title: Hash Fallback Test
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;

exports[`Merge includes (md2md) > inline-context: non-standalone includes use fallback > filelist 1`] = `
"[
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > inline-context: non-standalone includes use fallback 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Index

Welcome page.
"
`;

exports[`Merge includes (md2md) > inline-context: non-standalone includes use fallback 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# Document with inline includes

Standalone include (should be inlined):

<!-- source: _includes/snippet.md -->
## Note Content {#note}

This is an important note.

With multiple lines.
<!-- endsource: _includes/snippet.md -->

Inline in text (should fallback): See {% include [note](_includes/snippet.md#note) %} for details.

Standalone table include (should be inlined):

<!-- source: _includes/snippet.md -->
## Table Content {#table}

#|
|| Header 1 | Header 2 ||
|| Cell 1 | Cell 2 ||
|#
<!-- endsource: _includes/snippet.md -->

{% included (_includes/snippet.md) %}
## Note Content {#note}

This is an important note.

With multiple lines.

## Table Content {#table}

#|
|| Header 1 | Header 2 ||
|| Cell 1 | Cell 2 ||
|#

{% endincluded %}"
`;

exports[`Merge includes (md2md) > inline-context: non-standalone includes use fallback 3`] = `
"title: Merge Includes Inline Context
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;

exports[`Merge includes (md2md) > nested: outer inlined, inner as fallback > filelist 1`] = `
"[
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > nested: outer inlined, inner as fallback 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Index

Welcome page.
"
`;

exports[`Merge includes (md2md) > nested: outer inlined, inner as fallback 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# Main Document

Before outer include.

<!-- source: _includes/outer.md -->
## Outer Section

Content from outer include.

{% include [inner](_includes/inner.md) %}

End of outer include.

<!-- endsource: _includes/outer.md -->

After outer include.

{% included (_includes/inner.md) %}
### Inner Section

Content from inner include.

{% endincluded %}"
`;

exports[`Merge includes (md2md) > nested: outer inlined, inner as fallback 3`] = `
"title: Merge Includes Nested
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;

exports[`Merge includes (md2md) > relative-paths: inlined content has rebased paths > filelist 1`] = `
"[
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > relative-paths: inlined content has rebased paths 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Index

Welcome page.
"
`;

exports[`Merge includes (md2md) > relative-paths: inlined content has rebased paths 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# Main Document

<!-- source: _includes/sub/with-links.md -->
## Section With Links

See [the guide](_includes/guide.md) for more details.

![diagram](_includes/sub/images/diagram.png)

[ref-link]: _includes/reference.md "Reference"

<!-- endsource: _includes/sub/with-links.md -->
"
`;

exports[`Merge includes (md2md) > relative-paths: inlined content has rebased paths 3`] = `
"title: Merge Includes Relative Paths
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;

exports[`Merge includes (md2md) > term-inline: includes inside term defs use fallback (not inlined) > filelist 1`] = `
"[
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > term-inline: includes inside term defs use fallback (not inlined) 1`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Index

Welcome page.
"
`;

exports[`Merge includes (md2md) > term-inline: includes inside term defs use fallback (not inlined) 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# API Reference

Метод возвращает данные для [площадки](*placeID).

Параметр [тип синхронизации](*syncFactor) указывает вид кода.

Параметр [обязательный](*requiredParam) является обязательным.

Обычный инклюд на отдельной строке (до термов — инлайнится):

<!-- source: _includes/defs.md -->
## Required {#requiredParam}

Обязательный параметр.
<!-- endsource: _includes/defs.md -->

[*placeID]: {% include notitle [desc](_includes/defs.md#placeID) %}

[*syncFactor]: {% include notitle [desc](_includes/defs.md#syncFactor) %}

[*requiredParam]: {% include notitle [desc](_includes/defs.md#requiredParam) %}
    
{% include notitle [note](_includes/defs.md#placeID) %}

{% included (_includes/defs.md) %}
## PlaceID {#placeID}

ID площадки.

Читайте также:

- [Получить список](../list.md)

## SyncFactor {#syncFactor}

Вид кода.

Допустимые значения:

- \`1\` — асинхронный;
- \`2\` — синхронный.

## Required {#requiredParam}

Обязательный параметр.

{% endincluded %}"
`;

exports[`Merge includes (md2md) > term-inline: includes inside term defs use fallback (not inlined) 3`] = `
"title: Merge Includes Term Inline
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;

exports[`Merge includes (md2md) > without flag: includes are NOT merged > filelist 1`] = `
"[
  "_includes/simple-hash.md",
  "index.md",
  "main.md",
  "toc.yaml"
]"
`;

exports[`Merge includes (md2md) > without flag: includes are NOT merged 1`] = `
"## Included Section

This is the included content.
"
`;

exports[`Merge includes (md2md) > without flag: includes are NOT merged 2`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: index.md
---
# Index

Welcome page.
"
`;

exports[`Merge includes (md2md) > without flag: includes are NOT merged 3`] = `
"---
metadata:
  - name: generator
    content: Diplodoc Platform vDIPLODOC-VERSION
vcsPath: main.md
---
# Main Document

Content before include.

{% include [simple-include](_includes/simple-hash.md) %}

Content after include.
"
`;

exports[`Merge includes (md2md) > without flag: includes are NOT merged 4`] = `
"title: Merge Includes Basic
href: index.md
items:
  - name: Main
    href: main.md
path: toc.yaml
"
`;
